--- a/src/app/scss/tile.scss
+++ b/src/app/scss/tile.scss
@@ -10,6 +10,11 @@
     flex-direction: column;
     width: 16.5rem;
     margin: 20px;
+    
+    @include media-max(361px) {
+        box-shadow: 0px 0px 5px 0px $color-light-grey;
+        width: 90%;
+    }
 
     > div:last-child {
         padding: 20px;        
